# SDL_shenanigans

./: CMakeLists.txt  main.cpp
include/: App.hpp
include/scenes/: Scene.hpp  TestScene.hpp
include/util/: Rect.hpp  Texture.hpp  Timer.hpp
src/: App.cpp  CMakeLists.txt
src/scenes/: CMakeLists.txt  TestScene.cpp
src/util/: Texture.cpp
